# oneclaw

./: .env.example  .env.production.example  .gitignore  AGENTS.md  AI_AGENCY_ARCHITECTURE.md  AI_AGENCY_AUDIT.md  ARCHITECTURE.md  ARCHITECTURE_AUDIT.md  ARCHITECTURE_DIAGRAM.md  AUTONOMOUS_VOLUME_OUTREACH.md  BOUNCE_TRACKING_SESSION_LOG.md  BRAVE_PLAYWRIGHT_IMPLEMENTATION.md  BUSINESS_STORAGE_ARCHITECTURE.md  CACHING_OPTIONS.md  CAMPAIGN_INDEX.md  CAMPAIGN_README.md  CHECKPOINT_SUMMARY.md  COMPETITIVE_ANALYSIS.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  CONTACT_ENRICHMENT_SCHEMA.md  DAEMON_SUPABASE_TOOLS.md  DATA_STORAGE_STRATEGY.md  DELIVERY_CHECKLIST.md  DEPLOY.md  DISCORD_BOT_UPDATES.md  DISCOVERY_OUTPUT_FORMAT.md  DISCOVERY_TABLE_FORMAT.md  DISCOVERY_USAGE_EXAMPLES.ts  DISCOVERY_VISUAL_REFERENCE.md  DOCKER.md  DYNAMIC_PORTS.md  EMAIL_APPROVAL_FLOW.md  FINAL_VERIFICATION.md  FOLDER_STRUCTURE.md  GEMINI_VISION_IMPLEMENTATION.md  GMAIL_CONNECTION_FIX.md  GMAIL_REMEMBER_ME_SOLUTION.md  HOW_IT_WORKS.md  IMPLEMENTATION_SUMMARY.md  LAUNCH_CHECKLIST.md  (+70 more)
oneclaw-node/: Cargo.toml  Dockerfile  README.md
oneclaw-node/src/: agent_os.rs  autonomous_jobs.rs  config.rs  conversation.rs  daemon.rs  daemon_skills_sync.rs  executor.rs  heartbeat.rs  identity.rs  integration.rs  main.rs  memory.rs  monitor.rs  oauth_config.rs  ports.rs  receipt.rs  store.rs  workflow.rs
oneclaw-node/src/channels/: discord.rs  mod.rs
oneclaw-node/templates/: HEARTBEAT.md  IDENTITY.md  MEMORY.md  PLAYBOOKS.md  SKILLS.md  SOUL.md
oneclaw-node/workflows/: http_test.yaml  wallet_check.yaml
(+843 files in other folders)
