[package]
name = "oneclaw-node"
version = "0.1.0"
edition = "2021"
description = "OneClaw Node Runtime - Deterministic workflow execution"

[dependencies]
# HTTP Server
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json5 = "0.4"
serde_yaml = "0.9"

# Utilities
nanoid = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
regex = "1"
md5 = "0.7"
url = "2"
rand = "0.8"
base64 = "0.21"

# CLI
clap = { version = "4", features = ["derive"] }

# Load .env.local / .env into env (same keys as harness)
dotenvy = "0.15"

# File system
dirs = "5"

# HTTP client
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Database (SQLite for local store)
rusqlite = { version = "0.31", features = ["bundled"] }
tokio-rusqlite = "0.5"

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Discord WebSocket
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
